--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -1400,9 +1400,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -1878,8 +1876,8 @@
     "### Minimization methods\n",
     "\n",
     "Minimization methods attempt to minimize the error function\n",
-    "$\\| f(\\V{q}) \\|$ (usually expressed as minimizing squared error\n",
-    "$\\| f(\\V{q}) \\|^2$ for ease of computation). They are similar to\n",
+    "$\\| f(\\textbf{q}) \\|$ (usually expressed as minimizing squared error\n",
+    "$\\| f(\\textbf{q}) \\|^2$ for ease of computation). They are similar to\n",
     "root-finding methods, but produce more \"reasonable\" results when a\n",
     "solution does not exist, since the result should be as close as possible\n",
     "to attaining the target task. The simplest method is *gradient descent*\n",
@@ -1888,18 +1886,18 @@
     "\n",
     "### Incorporating other constraints\n",
     "\n",
-    "Soft preferences, such as minimizing $g(\\V{q})$ can designate other\n",
+    "Soft preferences, such as minimizing $g(\\textbf{q})$ can designate other\n",
     "desired criteria to be achieved in redundant systems. In minimization\n",
     "methods, preferences can be formulated by augmenting the objective\n",
-    "function with a small cost term: $\\|f(\\V{q})\\|^2 + \\epsilon g(\\V{q})$.\n",
+    "function with a small cost term: $\\|f(\\textbf{q})\\|^2 + \\epsilon g(\\textbf{q})$.\n",
     "The drawback of this approach is that if $\\epsilon$ is too large, the\n",
     "optimum of the augmented objective will no longer meet the task\n",
     "constraint, but if it is too small then it will not significantly affect\n",
     "the descent direction. In root finding methods, the direction of each\n",
     "step can be optimized in the null space of the task Jacobian to move in\n",
-    "the gradient descent direction $-\\nabla g(\\V{q})$ while also respecting\n",
+    "the gradient descent direction $-\\nabla g(\\textbf{q})$ while also respecting\n",
     "the constraint. Specifically, the null space projection is given by\n",
-    "$-(I - J^+ J ) \\nabla g(\\V{q})$ which can be added onto the step\n",
+    "$-(I - J^+ J ) \\nabla g(\\textbf{q})$ which can be added onto the step\n",
     "direction (with some scaling factor).\n",
     "\n",
     "The easiest type of hard constraint to incorporate is joint limits,\n",
@@ -1911,12 +1909,12 @@
     "and Quasi-Newton methods) will eliminate the direction of motion from\n",
     "consideration when determining the step size. In Newton-Raphson, this is\n",
     "done by setting the column of the Jacobian matrix corresponding to\n",
-    "constrained joints to zero before before computing the pseudoinverse. In\n",
+    "constrained joints to zero before computing the pseudoinverse. In\n",
     "Newton and Quasi-Newton optimization, both the row and column of the\n",
     "Hessian matrix are eliminated before inversion.\n",
     "\n",
     "More complex constraints, such as obstacle avoidance, may be expressed\n",
-    "in the form $h(\\V{q}) \\leq 0$, but are harder to accommodate. It is not\n",
+    "in the form $h(\\textbf{q}) \\leq 0$, but are harder to accommodate. It is not\n",
     "appropriate to simply check the feasibility of the solution after\n",
     "optimizing, since it will very likely be infeasible. More sophisticated\n",
     "constrained optimization models, like nonlinear programming, express all\n",
@@ -2113,7 +2111,7 @@
     "    application.\n",
     "\n",
     "-   The robot structure matches that assumed by the IK subroutine\n",
-    "    (including joint axes, link frame conventions, etc.)\n",
+    "    (including joint axes, link frame conventions, etc).\n",
     "\n",
     "-   Joint values are 0 at the robot's assumed reference position.\n",
     "\n",
@@ -2152,7 +2150,7 @@
     "\n",
     "4. &nbsp;&nbsp;&nbsp;Use a IK solver to find $q$ satisfying $\\textbf{x}(q) = \\textbf{x}_D(t)$, picking the solution closest to $q_{i-1}$.\n",
     "\n",
-    "5.  &nbsp;&nbsp;&nbsp;$q_i \\gets q$\n",
+    "5.  &nbsp;&nbsp;&nbsp;$q_i \\gets q$.\n",
     "\n",
     "6. **Return** the joint space path connecting $q_0,q_1,\\ldots,q_N$\n",
     "\n",
@@ -2162,12 +2160,12 @@
     "\n",
     "It is important to note that there are a number of caveats that may cause this procedure to fail or to create unusual artifacts: \n",
     "\n",
-    "1.  The configuration may run into joint limits, preventing further progress\n",
+    "1.  The configuration may run into joint limits, preventing further progress.\n",
     "\n",
-    "2.  Picking an IK solution that causes collisions\n",
+    "2.  Picking an IK solution that causes collisions.\n",
     "\n",
     "3.  Passing through or near singularities, causing the desired joint\n",
-    "    velocities to exceed their limits\n",
+    "    velocities to exceed their limits.\n",
     "\n",
     "4.  Tolerances of numerical methods can cause small but noticeable\n",
     "    oscillations (or large jumps near singularities).\n"
