--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -361,7 +361,7 @@
     "and **depth images** (aka range images). A point cloud is simply an\n",
     "unstructured list of points with no assumption of regularity. Points are\n",
     "not a priori identified to objects, nor to each other. This type of\n",
-    "representation results from moving lidar sensors and naïvely merged\n",
+    "representation results from moving lidar sensors and naively merged\n",
     "depth scans.\n",
     "\n",
     "A depth image is a 2D grayscale image indicating the distance from the\n",
@@ -424,11 +424,11 @@
     "\n",
     "Hence, we can represent the set of points contained by the object $G(t) \\subset R^3$ at time $t$ given only the pose $T(t)$. There are two equivalent (forward and inverse) representations:\n",
     "\n",
-    "- $G(t) = \\{ T(t)x \\quad|\\quad x \\in G_L \\}$.  (Imagine the points of the local geometry moving with the object's transform)\n",
+    "- $G(t) = \\{ T(t)x \\quad|\\quad x \\in G_L \\}$.  (Imagine the points of the local geometry moving with the object's transform.)\n",
     "\n",
-    "- $G(t) = \\{ x \\in R^3 \\quad|\\quad T(t)^{-1} x \\in G_L \\}$.  (Imagine the points in world coordinates being projected back into the reference frame)\n",
+    "- $G(t) = \\{ x \\in R^3 \\quad|\\quad T(t)^{-1} x \\in G_L \\}$.  (Imagine the points in world coordinates being projected back into the reference frame.)\n",
     "\n",
-    "Both representations are useful for different computations. Because it is much more efficient to change transforms than geometry data, is ubiquitous to represent geometries in a *transform-decoupled* manner as local-geometry / transform pairs $G=(G_L,T)$. For example, if a triangle mesh with 1,000,000 points undergoes a rotation and translation, this can be calculated using 1,000,000 3x3 matrix-vector multiplies and the same number of 3-vector additions. But, in a transform-decoupled representation, we can update the geometry's representation only 1 4x4 matrix multiply (using homogeneous coordinates), or 1 3x3 matrix-matrix multiply, a matrix-vector multiply, and a 3-vector addition (using rotation matrix and translation vectors)."
+    "Both representations are useful for different computations. Because it is much more efficient to change transforms than geometry data, it is ubiquitous to represent geometries in a *transform-decoupled* manner as local-geometry / transform pairs $G=(G_L,T)$. For example, if a triangle mesh with 1,000,000 points undergoes a rotation and translation, this can be calculated using 1,000,000 3x3 matrix-vector multiplies and the same number of 3-vector additions. But, in a transform-decoupled representation, we can update the geometry's representation only by 1 4x4 matrix multiply (using homogeneous coordinates), or 1 3x3 matrix-matrix multiply, a matrix-vector multiply, and a 3-vector addition (using rotation matrix and translation vectors)."
    ]
   },
   {
@@ -469,7 +469,7 @@
     "#### Volumetric containment testing\n",
     "\n",
     "Volumetric representations also lend themselves to fast containment\n",
-    "testing. Implicit surfaces simply require evaluating the sign of $f(\\textbf{x})$\n",
+    "testing. Implicit surfaces simply require evaluating the sign of $f(\\textbf{x})$.\n",
     "Grids have O(1) containment testing by converting the point to\n",
     "grid coordinates using Eq. $(\\ref{eq:PointToGridIndices})$ and\n",
     "then retrieving the contents of the identified grid\n",
@@ -491,7 +491,7 @@
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:InsideOutside\">Figure 2</a>.\n",
     "Left: Inside-outside testing for a point in an arbitrary surface can (normally) be determined by\n",
-    "counting the number of times a ray, eminating from the point, intersects the surface. If this count is odd, the point is inside, while if it is odd, the point is outside.  Right: special care must be taken at corner cases, such as when multiple surface primitives intersect the ray, or when the surface is tangent to the ray.</div>\n",
+    "counting the number of times a ray, eminating from the point, intersects the surface. If this count is odd, the point is inside, while if it is even, the point is outside.  Right: special care must be taken at corner cases, such as when multiple surface primitives intersect the ray, or when the surface is tangent to the ray.</div>\n",
     "\n",
     "************\n",
     "\n",
@@ -618,7 +618,7 @@
     "than a point to a face. Hence we must augment the number of directions\n",
     "examined for separation to handle this case. Specifically, for each\n",
     "combination of edges $(\\textbf{a}_1,\\textbf{a}_2)$ on $A$ and $(\\textbf{b}_1,\\textbf{b}_2)$\n",
-    "on $A$ we should determine whether separation holds along the direction:\n",
+    "on $B$ we should determine whether separation holds along the direction:\n",
     "$$(\\textbf{a}_2 - \\textbf{a}_1) \\times (\\textbf{b}_2 - \\textbf{b}_1).$$ If separation does\n",
     "not hold with respect to each normal direction of each face and each\n",
     "cross product direction, then the two polytopes overlap.\n",
