--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -717,13 +717,13 @@
     "To check collision between two BVHs, the following operations are\n",
     "performed recursively, starting at the root BVs.\n",
     "\n",
-    "1.  If the two BVs do not overlap, return \"no collision\"\n",
+    "1.  If the two BVs do not overlap, return \"no collision\".\n",
     "\n",
     "2.  If the two BVs are leaves, test their contents for collision. If a\n",
-    "    collision exists, return \"collision\"\n",
+    "    collision exists, return \"collision\".\n",
     "\n",
     "3.  Otherwise, pick one of the BVs and recurse on both of its children.\n",
-    "    If either call returns \"collision\", then return \"collision\"\n",
+    "    If either call returns \"collision\", then return \"collision\".\n",
     "\n",
     "In step 3, a simple heuristic is to choose the larger of the two BVs.\n",
     "Furthermore, we should choose which child to recurse on first in order\n",
@@ -1161,8 +1161,8 @@
     "    that an inside-outside containment tester is given? \n",
     "\n",
     "4.  Implement the grid-based broad-phase collision detection technique\n",
-    "    described in <a href=\"#broadphase\">Section 3.5</a> for disk-shaped.\n",
-    "    objects. Compare the running time of this algorithm with the brute-\n",
+    "    described in <a href=\"#broadphase\">Section 3.5</a> for disk-shaped bjects. \n",
+    "    Compare the running time of this algorithm with the brute-\n",
     "    force collision detection with varying numbers of objects, added\n",
     "    at random.\n",
     "\n",
