To Chap8.2 Not sure what's the orignal intention of _policy_. Changed to $\underline{policy}$.

--- a/WhatIsMotionPlanning.ipynb
+++ b/WhatIsMotionPlanning.ipynb
@@ -30,7 +30,7 @@
     "The three inputs into a motion planner are the system state, the system model and the task specification. For example, in the context of autonomous vehicles, the system state may specify the vehicle’s state, the map around it, and the state and intentions of other agents. The system model predicts how the system state changes in the future, conditioned on the robot’s decisions. The task specification includes cost function(s) that measure the quality of candidate motions as well as constraints that the motion must meet.  For example, an autonomous vehicle may wish to maximize ride comfort while also remaining collision-free, staying within a lane, etc. \n",
     "\n",
     "In this section, we will focus mainly on the problem of *kinematic motion planning* (aka\n",
-    "path planning), defined here\n",
+    "path planning), defined here:\n",
     "\n",
     "> **Kinematic motion planning** (aka **Path planning**): the use of computational methods generate a continuous path between two robot configurations while respecting joint limits and avoiding obstacles.\n",
     "\n",
@@ -69,8 +69,8 @@
     "various future states that it might be in, and actions it might take.\n",
     "Planning is somewhat like playing a game of chess, in that you imagine\n",
     "possible future states of the board as a result of various actions that\n",
-    "you might take. This cannot be done efficiently in a naïve fashion. If\n",
-    "$n$ steps wer needed to reach a goal, and $m$ actions were available at\n",
+    "you might take. This cannot be done efficiently in a naive fashion. If\n",
+    "$n$ steps were needed to reach a goal, and $m$ actions were available at\n",
     "each step, then there would be $m^n$ possible future action sequences!\n",
     "This can rapidly become huge, even for small values of $m$ and $n$ (not\n",
     "to mention the fact that robots can perform a *continuously infinite*\n",
@@ -198,7 +198,7 @@
     "\n",
     "### Explicit vs implicit plans (paths vs policies)\n",
     "\n",
-    "The classical form of planning described above _computes a single path_ (or declares \"no path found\").  Another type of output is a _policy_, which is a behavior-generating process that must be executed repeatedly, and over time the robot's state will trace out a path.  We will discuss policies in more detail when we cover control in [Section IV](WhatAreDynamicsAndControl.ipynb); suffice to say, finding complete / optimal policies is at least as hard as finding complete / optimal paths. "
+    "The classical form of planning described above _computes a single path_ (or declares \"no path found\").  Another type of output is a $\\underline{policy}$, which is a behavior-generating process that must be executed repeatedly, and over time the robot's state will trace out a path.  We will discuss policies in more detail when we cover control in [Section IV](WhatAreDynamicsAndControl.ipynb); suffice to say, finding complete / optimal policies is at least as hard as finding complete / optimal paths. "
    ]
   },
   {
@@ -328,9 +328,9 @@
     "\n",
     "Another common representation is a degree $d$ polynomial\n",
     "\n",
-    "$$ y(s) = poly(\\V{c}_0,\\ldots,\\V{c}_d;s) = \\sum_{i=0}^d \\V{c}_i s^i $$\n",
+    "$$ y(s) = poly(\\textbf{c}_0,\\ldots,\\textbf{c}_d;s) = \\sum_{i=0}^d \\textbf{c}_i s^i $$\n",
     "\n",
-    "where $\\V{c}_0,\\ldots,\\V{c}_d \\in \\mathcal{C}$ are the polynomial coefficients.  This is a _parametric_ representation in which each component of the motion is represented by an independent 1D function.  Hence, in 2D the y component of a curve may not be, in general, a proper function of x, even though both x and y are proper functions of u."
+    "where $\\textbf{c}_0,\\ldots,\\textbf{c}_d \\in \\mathcal{C}$ are the polynomial coefficients.  This is a _parametric_ representation in which each component of the motion is represented by an independent 1D function.  Hence, in 2D the y component of a curve may not be, in general, a proper function of x, even though both x and y are proper functions of u."
    ]
   },
   {
@@ -405,7 +405,7 @@
     "\n",
     "$$y(s) = poly(C_i;sn-i)$$\n",
     "\n",
-    "where $i=\\lfloor sn \\rfloor$ is the segment index and $C_i=(\\V{c}_{0,i},...,\\V{c}_{d,i})$ is the set of polynomial coefficients for the $i$th segment.  We do not typically store the polynomial coefficients themselves, but instead represent a list of control points $\\V{p}_1,\\ldots,\\V{p}_k$ from which the coefficients of each polynomial are derived.  This is because it is difficult to set up coefficients manually such that the spline is continuous and smooth.  Modifying control points is far easier and more intuitive.  The method for converting control points to coefficients is the _interpolation scheme_.\n",
+    "where $i=\\lfloor sn \\rfloor$ is the segment index and $C_i=(\\textbf{c}_{0,i},...,\\textbf{c}_{d,i})$ is the set of polynomial coefficients for the $i$th segment.  We do not typically store the polynomial coefficients themselves, but instead represent a list of control points $\\textbf{p}_1,\\ldots,\\textbf{p}_k$ from which the coefficients of each polynomial are derived.  This is because it is difficult to set up coefficients manually such that the spline is continuous and smooth.  Modifying control points is far easier and more intuitive.  The method for converting control points to coefficients is the _interpolation scheme_.\n",
     "\n",
     "Typical splines are degree 3 or 5, which are known as cubic or quintic splines, respectively.  (Degree 1 splines are actually piecewise linear curves.) These degrees are popular because they allow control point interpolation schemes to dictate the order of the spline's smoothness (derivative continuity).\n",
     "\n",
@@ -482,58 +482,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Specifically, suppose the segment travels from milestone $\\V{m}_0$ to $\\V{m}_1$ as the interpolation parameter travels from 0 to 1.  We wish to find a cubic polynomial segment that respects the initial tangent $\\V{t}_0$ and the terminal tangent $\\V{t}_1$.  In other words, the terminal conditions are\n",
+    "Specifically, suppose the segment travels from milestone $\\textbf{m}_0$ to $\\textbf{m}_1$ as the interpolation parameter travels from 0 to 1.  We wish to find a cubic polynomial segment that respects the initial tangent $\\textbf{t}_0$ and the terminal tangent $\\textbf{t}_1$.  In other words, the terminal conditions are\n",
     "\n",
     "$$\\begin{split}\n",
-    "\\V{m}_0 &= poly(C_i;0) \\\\\n",
-    "\\V{m}_1 &= poly(C_i;1) \\\\\n",
-    "\\V{t}_0 &= \\left. \\frac{d}{du} poly(C_i;u) \\right|_{u=0} \\\\\n",
-    "\\V{t}_1 &= \\left. \\frac{d}{du} poly(C_i;u) \\right|_{u=1} \n",
+    "\\textbf{m}_0 &= poly(C_i;0) \\\\\n",
+    "\\textbf{m}_1 &= poly(C_i;1) \\\\\n",
+    "\\textbf{t}_0 &= \\left. \\frac{d}{du} poly(C_i;u) \\right|_{u=0} \\\\\n",
+    "\\textbf{t}_1 &= \\left. \\frac{d}{du} poly(C_i;u) \\right|_{u=1} \n",
     "\\end{split}\n",
     "$$\n",
     "\n",
-    "Letting the coefficients $C_i =(\\V{a},\\V{b},\\V{c},\\V{t})$, we have \n",
-    "$$ poly(C_i;u) = \\V{a} + u \\V{b} + u^2 \\V{c} + u^3 \\V{t} $$\n",
-    "$$ \\frac{d}{du} poly(C_i;u) = \\V{b} + 2 u \\V{c} + 3 u^2 \\V{t} $$\n",
-    "so immediately, we see that $\\V{a} = \\V{m}_0$ and $\\V{b} = \\V{t}_0$.  We now need to solve for $\\V{c}$ and $\\V{t}$ such that the linear equations\n",
-    "$$\\V{m}_1 = \\V{m}_0 + \\V{t}_0 + \\V{c} + \\V{t}$$\n",
+    "Letting the coefficients $C_i =(\\textbf{a},\\textbf{b},\\textbf{c},\\textbf{t})$, we have \n",
+    "$$ poly(C_i;u) = \\textbf{a} + u \\textbf{b} + u^2 \\textbf{c} + u^3 \\textbf{t} $$\n",
+    "$$ \\frac{d}{du} poly(C_i;u) = \\textbf{b} + 2 u \\textbf{c} + 3 u^2 \\textbf{t} $$\n",
+    "so immediately, we see that $\\textbf{a} = \\textbf{m}_0$ and $\\textbf{b} = \\textbf{t}_0$.  We now need to solve for $\\textbf{c}$ and $\\textbf{t}$ such that the linear equations\n",
+    "$$\\textbf{m}_1 = \\textbf{m}_0 + \\textbf{t}_0 + \\textbf{c} + \\textbf{t}$$\n",
     "and\n",
-    "$$\\V{t}_1 = \\V{t}_0 + 2 \\V{c} + 3 \\V{t}$$\n",
+    "$$\\textbf{t}_1 = \\textbf{t}_0 + 2 \\textbf{c} + 3 \\textbf{t}$$\n",
     "hold.  To do so we rearrange the above into the matrix equation\n",
-    "$$\\begin{bmatrix}\\V{m}_1 - \\V{m}_0 - \\V{t}_0 \\\\\n",
-    "\\V{t}_1 - \\V{h_0}\n",
+    "$$\\begin{bmatrix}\\textbf{m}_1 - \\textbf{m}_0 - \\textbf{t}_0 \\\\\n",
+    "\\textbf{t}_1 - \\textbf{h_0}\n",
     "\\end{bmatrix} =\n",
     "\\begin{bmatrix}\n",
     "1 & 1 \\\\\n",
     "2 & 3\n",
     "\\end{bmatrix}\n",
-    "\\begin{bmatrix} \\V{c} \\\\ \\V{t} \\end{bmatrix} $$\n",
+    "\\begin{bmatrix} \\textbf{c} \\\\ \\textbf{t} \\end{bmatrix} $$\n",
     "Which has the solution via 2x2 matrix inversion\n",
-    "$$\\begin{bmatrix} \\V{c} \\\\ \\V{t} \\end{bmatrix} = \n",
+    "$$\\begin{bmatrix} \\textbf{c} \\\\ \\textbf{t} \\end{bmatrix} = \n",
     "\\begin{bmatrix}\n",
     "1 & 1 \\\\\n",
     "2 & 3\n",
     "\\end{bmatrix}^{-1}\n",
-    "\\begin{bmatrix}\\V{m}_1 - \\V{m}_0 - \\V{t}_0 \\\\\n",
-    "\\V{t}_1 - \\V{h_0}\n",
+    "\\begin{bmatrix}\\textbf{m}_1 - \\textbf{m}_0 - \\textbf{t}_0 \\\\\n",
+    "\\textbf{t}_1 - \\textbf{h_0}\n",
     "\\end{bmatrix} = \n",
     "\\begin{bmatrix}\n",
     "3 & -1 \\\\\n",
     "-2 & 1\n",
     "\\end{bmatrix}\n",
-    "\\begin{bmatrix}\\V{m}_1 - \\V{m}_0 - \\V{t}_0 \\\\\n",
-    "\\V{t}_1 - \\V{h_0}\n",
+    "\\begin{bmatrix}\\textbf{m}_1 - \\textbf{m}_0 - \\textbf{t}_0 \\\\\n",
+    "\\textbf{t}_1 - \\textbf{h_0}\n",
     "\\end{bmatrix} . $$\n",
-    "(Check that the inverse is correct by inspection.) In other words, $\\V{c} = - 3\\V{m}_0 + 3 \\V{m}_1 - 2\\V{t}_0 - \\V{t}_1$ and $\\V{t} =  2\\V{m}_0 -2 \\V{m}_1 + \\V{t}_0 + \\V{t}_1$.\n",
+    "(Check that the inverse is correct by inspection.) In other words, $\\textbf{c} = - 3\\textbf{m}_0 + 3 \\textbf{m}_1 - 2\\textbf{t}_0 - \\textbf{t}_1$ and $\\textbf{t} =  2\\textbf{m}_0 -2 \\textbf{m}_1 + \\textbf{t}_0 + \\textbf{t}_1$.\n",
     "\n",
     "Another convenient way of expressing the segment is:\n",
     "\n",
-    "$$poly(C_i;u) = (2u^3 - 3u^2 + 1) \\V{m}_0 + (-2u^3 + 3u^3) \\V{m}_1 + (u^3 - 2u^2 + u)\\V{t}_0 + (u^3 - u^2) \\V{t}_1.$$\n",
+    "$$poly(C_i;u) = (2u^3 - 3u^2 + 1) \\textbf{m}_0 + (-2u^3 + 3u^3) \\textbf{m}_1 + (u^3 - 2u^2 + u)\\textbf{t}_0 + (u^3 - u^2) \\textbf{t}_1.$$\n",
     "\n",
     "\n",
     "#### Quintic Hermite splines\n",
     "\n",
-    "The quintic Hermite spline defines control points to include milestones and their 1st and second derivatives. The interpolation scheme enforce continuity of first and second derivatives (C2 continuity)."
+    "The quintic Hermite spline defines control points to include milestones and their 1st and second derivatives. The interpolation scheme enforce continuity of first and second derivatives (C2 continuity).\n"
    ]
   },
   {
@@ -560,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
