--- a/WhatIsMotionPlanning.ipynb
+++ b/WhatIsMotionPlanning.ipynb
@@ -198,7 +198,7 @@
     "\n",
     "### Explicit vs implicit plans (paths vs policies)\n",
     "\n",
-    "The classical form of planning described above _computes a single path_ (or declares \"no path found\").  Another type of output is a $\\underline{policy}$, which is a behavior-generating process that must be executed repeatedly, and over time the robot's state will trace out a path.  We will discuss policies in more detail when we cover control in [Section IV](WhatAreDynamicsAndControl.ipynb); suffice to say, finding complete / optimal policies is at least as hard as finding complete / optimal paths. "
+    "The classical form of planning described above _computes a single path_ (or declares \"no path found\").  Another type of output is a $\\textit{policy}$, which is a behavior-generating process that must be executed repeatedly, and over time the robot's state will trace out a path.  We will discuss policies in more detail when we cover control in [Section IV](WhatAreDynamicsAndControl.ipynb); suffice to say, finding complete / optimal policies is at least as hard as finding complete / optimal paths. "
    ]
   },
   {
@@ -213,26 +213,26 @@
     "\n",
     "In behavior scripting, the control signal sent to the robot's actuators is a direct function of its input sensor signals, which is programmed as a body of procedural code; e.g., a set of arithmetic operations and if-else statements.  This programmed logic becomes the body of the \"planner\", which does not actually explicitly plan anything. Behavior scripting has the appeal in that it provides novices with an easy pathway to start experimenting with robot behaviors.  For example, to follow a black line on a sheet of white paper, two brightness sensors can be used, one to the left and the other to the right of the line.  If the left sensor reads \"black\", turn the wheel more to the left and reduce the forward velocity.  If the right sensor reads \"black\", turn the wheel more to the right and reduce the forward velocity.  Otherwise, turn the wheel toward center, and increase the forward velocity.  Properly tuned, this behavior will do a reasonable job at following lines that are not too curved at a slow speed.\n",
     "\n",
-    "A more complex behavior script can include some notion of memory that is maintained from step to step, such as a list of objects seen or past actions taken.  A common form of memory is used in a _state machine_, where the behavior switches between discrete modes depending on the sensor input or past actions taken.  In a pure state machine, the only thing that needs to be remembered is the index of the current state. State machines will be discussed in more detail in [Chapter 16](RobotControl.ipynb#State-machines).\n",
+    "A more complex behavior script can include some notion of memory that is maintained from step to step, such as a list of objects seen or past actions taken.  A common form of memory is used in a $\\textit{state machine}$, where the behavior switches between discrete modes depending on the sensor input or past actions taken.  In a pure state machine, the only thing that needs to be remembered is the index of the current state. State machines will be discussed in more detail in [Chapter 16](RobotControl.ipynb#State-machines).\n",
     "\n",
     "The challenge of behavior scripting is that as the problem domain becomes more complex, the complexity of the program's logic (and the corresponding difficulty of programming good behavior) tends to grow exponentially.\n",
     "\n",
     "### Generate-and-score\n",
     "\n",
     "A straightforward way of performing motion planning is a three step process:\n",
-    "1. _Generate_ a set of $N$ paths $p_1,\\ldots,p_N$, each of which starts from the robot's current state $x$.\n",
-    "2. _Score_ each path using a score function $S(p)$.  Let $p_i$ be the path with minimum score.\n",
-    "3. _Execute_ the first part of $p_i$, and then repeat from step 1.\n",
+    "1. $\\textit{Generate}$ a set of $N$ paths $p_1,\\ldots,p_N$, each of which starts from the robot's current state $x$.\n",
+    "2. $\\textit{Score}$ each path using a score function $S(p)$.  Let $p_i$ be the path with minimum score.\n",
+    "3. $\\textit{Execute}$ the first part of $p_i$, and then repeat from step 1.\n",
     "\n",
-    "Unlike behavior scripting, this _generate-and-score_ approach is indeed a true planner, because the Generate step predicts how the robot will behave and the Score step can perform collision checks and handle other constraints.\n",
+    "Unlike behavior scripting, this $\\textit{generate-and-score}$ approach is indeed a true planner, because the $\\textit{Generate}$ step predicts how the robot will behave and the $\\textit{Score}$ step can perform collision checks and handle other constraints.\n",
     "\n",
     "A huge range of behavior can be obtained by tweaking the path generation and scoring methods.  In fact, most motion planners perform some variant of this process, but use sophisticated methods to generate the paths.  This approach can be very computationally light, and even effective at solving some problems.  However, because the generated paths usually do not reach all the way to the goal, this approach assumes that the problem requires minimal amounts of long-range deliberation to reach the goal.\n",
     "\n",
     "As an example, a random-path generation approach simply generates $N$ paths at random, and the scoring function will assign infinite cost to any infeasible path. For feasible paths, the score will measure a combination of the length of the path and the distance from the end of the path to the goal. What we can observe with this approach is that its success is highly problem-dependent. If the robot is traveling in a wide open space or around small obstacles, then it works fairly well, although there is a little jittering.\n",
     "\n",
-    "This jittering can be reduced by applying some smoothing in postprocessing.  Or, rather than generating random paths, we can use a library of _motion primitives_ that are the same at each iteration, slightly modified to start at the robot's current state.  For example, a mobile robot can move forward, move backward, turn right, turn left, or perform swerving maneuvers left and right.\n",
+    "This jittering can be reduced by applying some smoothing in postprocessing.  Or, rather than generating random paths, we can use a library of $\\textit{motion primitives}$ that are the same at each iteration, slightly modified to start at the robot's current state.  For example, a mobile robot can move forward, move backward, turn right, turn left, or perform swerving maneuvers left and right.\n",
     "\n",
-    "However, if the robot must exit a room before making progress to the goal, then it will be incredibly unlikely to find a path out of the first room, either using random paths or motion primitives.  This is known as a *local minimum*, which will be a reoccurring issue throughout robotics (and other fields of engineering as well.)"
+    "However, if the robot must exit a room before making progress to the goal, then it will be incredibly unlikely to find a path out of the first room, either using random paths or motion primitives.  This is known as a $\\textit{local minimum}$, which will be a reoccurring issue throughout robotics (and other fields of engineering as well)."
    ]
   },
   {
@@ -501,7 +501,7 @@
     "$$\\textbf{t}_1 = \\textbf{t}_0 + 2 \\textbf{c} + 3 \\textbf{t}$$\n",
     "hold.  To do so we rearrange the above into the matrix equation\n",
     "$$\\begin{bmatrix}\\textbf{m}_1 - \\textbf{m}_0 - \\textbf{t}_0 \\\\\n",
-    "\\textbf{t}_1 - \\textbf{h_0}\n",
+    "\\textbf{t}_1 - \\textbf{t}_{0}\n",
     "\\end{bmatrix} =\n",
     "\\begin{bmatrix}\n",
     "1 & 1 \\\\\n",
@@ -515,14 +515,14 @@
     "2 & 3\n",
     "\\end{bmatrix}^{-1}\n",
     "\\begin{bmatrix}\\textbf{m}_1 - \\textbf{m}_0 - \\textbf{t}_0 \\\\\n",
-    "\\textbf{t}_1 - \\textbf{h_0}\n",
+    "\\textbf{t}_1 - \\textbf{t}_{0}\n",
     "\\end{bmatrix} = \n",
     "\\begin{bmatrix}\n",
     "3 & -1 \\\\\n",
     "-2 & 1\n",
     "\\end{bmatrix}\n",
     "\\begin{bmatrix}\\textbf{m}_1 - \\textbf{m}_0 - \\textbf{t}_0 \\\\\n",
-    "\\textbf{t}_1 - \\textbf{h_0}\n",
+    "\\textbf{t}_1 - \\textbf{t}_{0}\n",
     "\\end{bmatrix} . $$\n",
     "(Check that the inverse is correct by inspection.) In other words, $\\textbf{c} = - 3\\textbf{m}_0 + 3 \\textbf{m}_1 - 2\\textbf{t}_0 - \\textbf{t}_1$ and $\\textbf{t} =  2\\textbf{m}_0 -2 \\textbf{m}_1 + \\textbf{t}_0 + \\textbf{t}_1$.\n",
     "\n",
