--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "Bug algorithms are simple, clever planning methods that do not actually need a map of obstacles to work!  The only pieces of information needed on-board the robot are 1) a way to determine the robot's current location $X$ and goal location $G$, 2) a contact sensor, and 3) a bit of memory.  By studying how the robot would behave in certain maps, this give us a sense of how to analyze the performance of planners. \n",
     "\n",
-    "The inspiration for bug algorithms comes from the right-hand rule_ for solving mazes. If you are in a maze, a sure-fire way not to get lost is to find a wall, face a direction so that the wall is on your right, and walk along the wall while keeping it immediately to your right.  By following this process, only two possibilities may result: 1) you exit the maze, or 2) you return to the point at which you first touched the wall.  If you return to the starting point, the wall makes a closed circuit, so the next step should be to find a new portion of wall that you did not touch, and apply the right-hand rule again for that new wall.  Using this approach, you are guaranteed to explore the entire maze.  (There is no significance to right vs left; you can just as easily apply a left-hand rule.)\n",
+    "The inspiration for bug algorithms comes from the $\\textit{right-hand rule}$ for solving mazes. If you are in a maze, a sure-fire way not to get lost is to find a wall, face a direction so that the wall is on your right, and walk along the wall while keeping it immediately to your right.  By following this process, only two possibilities may result: 1) you exit the maze, or 2) you return to the point at which you first touched the wall.  If you return to the starting point, the wall makes a closed circuit, so the next step should be to find a new portion of wall that you did not touch, and apply the right-hand rule again for that new wall.  Using this approach, you are guaranteed to explore the entire maze.  (There is no significance to right vs left; you can just as easily apply a $\\textit{left-hand rule}$.)\n",
     "\n",
     "The first method we will study is called Bug 1.  Unlike the case of a maze, in planning we know which direction we would need to take to reach the goal.  So, Bug 1 proceeds as follows:\n",
     "\n",
@@ -109,7 +109,7 @@
     "\n",
     "*************\n",
     "\n",
-    "Bug 1 might seem at first to be a little more efficient than Bug 2, because it will opportunistically move in a straight line toward the goal whenever it can break away from the obstacle.  Bug 2 has to hug the boundary of an obstacle until it reaches the line $\\overline{PG}$ again.  However, the problem in Bug 1 is that it may fall into an _infinite loop_, as shown in Fig. 3.  Here, the obstacle is set up so that the robot breaks away from the obstacle, only to hit it again.\n",
+    "Bug 1 might seem at first to be a little more efficient than Bug 2, because it will opportunistically move in a straight line toward the goal whenever it can break away from the obstacle.  Bug 2 has to hug the boundary of an obstacle until it reaches the line $\\overline{PG}$ again.  However, the problem in Bug 1 is that it may fall into an $\\textit{infinite loop}$, as shown in Fig. 3.  Here, the obstacle is set up so that the robot breaks away from the obstacle, only to hit it again.\n",
     "\n",
     "*************\n",
     "\n",
@@ -379,7 +379,7 @@
     "\n",
     "The trapezoidal decomposition as stated is complete but not optimal.\n",
     "However, simple modifications of the vertical coordinates\n",
-    "--straightening the path when possible --- can be made to find the\n",
+    " --- straightening the path when possible --- can be made to find the\n",
     "shortest path passing through the cells produced by the algorithm.\n",
     "\n",
     "** TODO: add more here **"
@@ -762,8 +762,8 @@
     "3.  Prove that the minimum length path in a polygonal environment is\n",
     "    either a straight line or passes through obstacle vertices. Then\n",
     "    prove that the visibility graph method yields a path with minimum\n",
-    "    length. Hint: consider whether a locally suboptimal path can be\n",
-    "    improved by \"shortcutting\" one of the corners of the path.\n",
+    "    length. _Hint: consider whether a locally suboptimal path can be\n",
+    "    improved by \"shortcutting\" one of the corners of the path._\n",
     "\n",
     "4.  Is grid search with 4-connected neighbors in a plane approximately\n",
     "    optimal, provided that clearance is sufficiently large, and the\n",
@@ -801,7 +801,7 @@
    "source": [
     "## Interactive examples\n",
     "\n",
-    "The following examples require Numpy and Matplotlib to be installed on your system, and for your Jupyter notebook to be run in the same folder containing this iPython notebook.\n",
+    "The following examples require [Numpy](https://numpy.org/) and [Matplotlib](https://matplotlib.org/) to be installed on your system, and for your Jupyter notebook to be run in the same folder containing this iPython notebook.\n",
     "\n",
     "### Grid search\n",
     "\n",
@@ -911,7 +911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
