--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -95,7 +95,7 @@
     "implicit function $f$ may be the signed distance in workspace between\n",
     "the robot and obstacles. (Specifically, this would return the distance\n",
     "when there is no collision, and the negative of the penetration depth\n",
-    "when collision exists). For most complex geometric models it is far more\n",
+    "when collision exists.) For most complex geometric models it is far more\n",
     "computationally expensive to perform distance and penetration depth\n",
     "computations than collision queries. As a result there is a trade off\n",
     "between using a computational query that provides richer information vs\n",
@@ -159,7 +159,7 @@
     "dramatically as dimension increases. In fact the volume of a unit\n",
     "hypersphere approaches 0 as $d\\rightarrow \\infty$! This implies that\n",
     "*almost all points are far* in a high dimensional space, for most\n",
-    "reasonable definitions of \"far.\" Another effect is that the complexity\n",
+    "reasonable definitions of \"far\". Another effect is that the complexity\n",
     "of a polytope grows dramatically. Consider a polytope in $d$-D space\n",
     "with $n$ faces, such as that defined by a linear equality $A x \\leq b$,\n",
     "with $A$ an $n \\times d$ matrix and $b$ an $n$-vector. The number of\n",
@@ -303,7 +303,7 @@
     "and performance:\n",
     "\n",
     "-   The sampling distribution over $\\mathcal{C}$ (the $Sample()$\n",
-    "    subroutine in Line 4),\n",
+    "    subroutine in Line 4).\n",
     "\n",
     "-   The method for determining nearby milestones in Line 7.\n",
     "\n",
@@ -410,7 +410,7 @@
     "path in the $G=(V,E)$. After each change of $G$, $CC$ is updated to\n",
     "reflect any changes in connected component. The difficulty is that each\n",
     "time an edge gets added, the connected components of those two points\n",
-    "need to be *merged* (Line 13). If this were done in a naïve fashion\n",
+    "need to be *merged* (Line 13). If this were done in a naive fashion\n",
     "(say, by storing a list of connected milestones per milestone), it could\n",
     "take an extremely long time ($O(|V|)$, where $|V|$ is the number of\n",
     "vertices currently in $V$) for each update. Fortunately, there is a\n",
@@ -433,7 +433,7 @@
     "successfully finding a path increases as $N$ increases. After a \"burn\n",
     "in\" phase with low $N$ where there is no change of finding a solution,\n",
     "the probability of success rises fairly sharply before tapering off. The\n",
-    "slope of this tapering off depends Ron the visibility characteristics of\n",
+    "slope of this tapering off depends on the visibility characteristics of\n",
     "the problem, which we shall discuss below.\n",
     "\n",
     "The average time needed for incremental PRM to solve a given problem\n",
@@ -510,7 +510,7 @@
     "likely for each extension to succeed, but the tree makes slower progress\n",
     "in exploring the free space.\n",
     "\n",
-    "Code for $Extend-Tree$ is given in\n",
+    "Pseudocode for $Extend-Tree$ is given in\n",
     "[Alg. Extend-Tree](#alg:ExtendTree). It first performs a nearest-neighbor query\n",
     "on the milestones in the given tree to determine a milestone $q_{near}$.\n",
     "It then extends a short path no more than distance $\\delta$ toward the\n",
@@ -521,15 +521,15 @@
     "$Sample()$ function directly, nor do they attempt more than one edge\n",
     "connection per iteration. Hence, they sample points in a different\n",
     "distribution than PRMs. But what is this distribution? We first\n",
-    "introduce the concept of a Voronoï diagram, which defined for some set\n",
-    "of points $X = \\{\\V{x}_1,\\ldots,\\V{x}_n\\}$. The Voronoï diagram is a\n",
-    "partition of the space $\\mathcal{C}$ into Voronoï cells , one per point.\n",
-    "The cell $C_i$ corresponding to a point $\\V{x}_i$ is the subset of\n",
-    "$\\mathcal{C}$ for which $\\V{x}_i$ is the closest point. In other words,\n",
-    "$$C_i \\equiv \\{ \\V{x} \\in \\mathcal{C}\\quad | \\quad i = \\arg \\min_{i=1,\\ldots,n} d(\\V{x},\\V{x}_i) \\}$$\n",
-    "RRT is said to employ a Voronoï bias strategy because each milestone in\n",
+    "introduce the concept of a Voronoi diagram, which defined for some set\n",
+    "of points $X = \\{\\textbf{x}_1,\\ldots,\\textbf{x}_n\\}$. The Voronoi diagram is a\n",
+    "partition of the space $\\mathcal{C}$ into Voronoi cells , one per point.\n",
+    "The cell $C_i$ corresponding to a point $\\textbf{x}_i$ is the subset of\n",
+    "$\\mathcal{C}$ for which $\\textbf{x}_i$ is the closest point. In other words,\n",
+    "$$C_i \\equiv \\{ \\textbf{x} \\in \\mathcal{C}\\quad | \\quad i = \\arg \\min_{i=1,\\ldots,n} d(\\textbf{x},\\textbf{x}_i) \\}$$\n",
+    "RRT is said to employ a Voronoi bias strategy because each milestone in\n",
     "a tree is selected for expansion (i.e., be the nearest node to\n",
-    "$q_{rand}$) with probability proportional to the volume of its Voronoï\n",
+    "$q_{rand}$) with probability proportional to the volume of its Voronoi\n",
     "cell. This means that milestones that are closer to unexplored areas of\n",
     "$\\mathcal{C}$ have a higher likelihood of being expanded. Moreover, the\n",
     "extended milestone will have a higher likelihood of extending the tree\n",
@@ -550,7 +550,7 @@
     "<div class=\"figcaption\"><a name=\"fig:RRTBugtrap\">Figure 3</a>\n",
     "To escape the mouth of a bugtrap, an RRT needs to sample a very\n",
     "carefully chosen sequence of milestones within the general area that it\n",
-    "has already explored. But due to the Voronoï bias, it frequently\n",
+    "has already explored. But due to the Voronoi bias, it frequently\n",
     "attempts infeasible extensions from the highlighted frontier\n",
     "nodes.\n",
     "</div>\n",
@@ -563,8 +563,8 @@
     "between *exploration* toward new areas and *refinement* of the roadmap\n",
     "in existing areas. Let's assume RRT only grows a tree from the start; it\n",
     "is easy to imagine double-bugtraps that cause the same behavior for the\n",
-    "goal. Here, the has a very difficult time wiggling out of the opening of\n",
-    "the trap because it appears purely from the Voronoï bias that the\n",
+    "goal. Here, the bug has a very difficult time wiggling out of the opening of\n",
+    "the trap because it appears purely from the Voronoi bias that the\n",
     "frontier has not yet been adequately explored. However, each attempted\n",
     "extension ends up bumping into the walls of the trap. A *sequence* of\n",
     "precisely-chosen values of $q_{rand}$ are needed to escape the trap,\n",
@@ -698,7 +698,7 @@
     "\n",
     "So far we have assumed that edges in configuration space can be checked for collision using the $Visible$ subroutine, but checking collisions is not as straightforward as in simple geometric spaces, where we could simply check the collision status of a line segment. \n",
     "\n",
-    "The simplest method for approximating the feasibility of a configuration-space line segment $\\overline{ab}$ is to subdivide $\\overline{ab}$ into small segments, with configurations $q_1=a,q_2,\\ldots,q_{n-1},q_n=b$ uniformlyspaced no more than $\\epsilon$ distance apart.  Then, each of $q_1,...,q_n$ is checked for collision using the $Feasible$ subroutine.  The segment is considered visible if all configurations are feasible.\n",
+    "The simplest method for approximating the feasibility of a configuration-space line segment $\\overline{ab}$ is to subdivide $\\overline{ab}$ into small segments, with configurations $q_1=a,q_2,\\ldots,q_{n-1},q_n=b$ uniformly spaced no more than $\\epsilon$ distance apart.  Then, each of $q_1,...,q_n$ is checked for collision using the $Feasible$ subroutine.  The segment is considered visible if all configurations are feasible.\n",
     "\n",
     "Note that this is only an approximate method that depends on the resolution $\\epsilon$.  If this is too large, then collisions may be missed between checked points $q_{i}$ and $q_{i+1}$ even if both $q_{i}$ and $q_{i+1}$ are feasible.  On the other hand, if $\\epsilon$ is too small, then this takes a lot of time.  Precisely, the number of collisions checked is $n = \\lceil d(a,b) / \\epsilon \\rceil$.\n",
     "\n",
@@ -769,7 +769,7 @@
     "for a wide variety of problems by non-planning experts. However, there\n",
     "are several issues that can cause PRM's to fail. What is often\n",
     "frustrating is that the PRM will not provide a *rationale* for failure!\n",
-    "It just appears that it just \"doesn't work.\" Some of the most common\n",
+    "It just appears that it just \"doesn't work\". Some of the most common\n",
     "pitfalls encountered when implement PRMs and their variants are:\n",
     "\n",
     "-   Improper handling of non-Euclidean topology of $\\mathcal{C}$ in the\n",
@@ -816,7 +816,7 @@
     "The infeasible endpoint problem is often encountered when there is a bit\n",
     "of error in the world model or the robot's sensing of its configuration,\n",
     "and the robot starts or ends at a configuration that is in contact (or\n",
-    "close to it.) There are two approaches to handling this: before\n",
+    "close to it). There are two approaches to handling this: before\n",
     "planning, adjust the world model so that the robot is collision free\n",
     "(which can be hard), or slightly perturb $s$ and $g$ to new\n",
     "configurations $s^\\prime$ and $g^\\prime$ that are collision free with\n",
@@ -871,7 +871,7 @@
     "never fails (or always passes) this suggests an obvious implementation\n",
     "bug.\n",
     "\n",
-    "Finally, the free space must not contain a contain a non-neglible volume\n",
+    "Finally, the free space must not contain a non-neglible volume\n",
     "of space (that is, $\\mu(\\mathcal{F}) / \\mu(\\mathcal{C})> 0$). This\n",
     "condition may be produced when a constraint is introduced (like an IK\n",
     "constraint, or a constraint that two objects must touch, or that a joint\n",
@@ -960,8 +960,8 @@
     "### Trajectory optimization\n",
     "\n",
     "Trajectory optimization is another potential-based method that optimizes\n",
-    "the overall shape the robot's path to minimize cost. Unlike potential\n",
-    "fields, for which the optimization variable is the configuration is a\n",
+    "the overall shape of the robot's path to minimize cost. Unlike potential\n",
+    "fields, for which the optimization variable is the configuration of a\n",
     "single point in time, trajectory optimization uses some parameterization\n",
     "of the *entire* path as the optimization variable. This helps it avoid\n",
     "future obstacles and, in some cases, avoid local minima that potential\n",
@@ -1138,7 +1138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
